force-app/main/default/objects/Customer_Price_List__c/Customer_Price_List__c.object-meta.xml
<CustomObject>
    <description>Custom object to represent a scheduled CPL. Records only saved if they are scheduled for external. External/Internal records can be download for xls and pdf and the values pulled in are based on the filter selections of the custom fields on this object.</description>
    <label>Customer Price List</label>
    <nameField>
        <label>Customer Price List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>