force-app/main/default/objects/Customer_Price_List__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the contract. Used for the Internal record type.</description>
    <label>Agreement</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customer Price Lists</relationshipLabel>
    <relationshipName>Customer_Price_Lists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>