force-app/main/default/objects/Customer_Price_List__c/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <description>Displays as a multi-select in the CPL form but is a text field. Defaults to All Brands which searches for all brands, but if a user selects one or multiple then the query will only search for the selections. Filter selections available is both controlling and dynamic to all CBSS selections and Division.</description>
    <inlineHelpText>Search All Brands within the agreement or search to filter the results.</inlineHelpText>
    <label>Brands</label>
    <length>255</length>
    <type>Text</type>
</CustomField>