force-app/main/default/objects/Customer_Price_List__c/fields/Classes__c.field-meta.xml
<CustomField>
    <fullName>Classes__c</fullName>
    <label>Classes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>