force-app/main/default/objects/Customer_Price_List__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>Free-form email address section</description>
    <inlineHelpText>This field is required to schedule a CPL.

Use a line break to separate multiple email recipients.</inlineHelpText>
    <label>Customer Email</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>