force-app/main/default/objects/Customer_Price_List__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Displays as a multi-select in the CPL form but is a text field. Defaults to All Divisions which searches for all products in the agreement, but if a user selects one or multiple among the list of servicing divisions on the products of published contract line items then the query will only search for the selections. Filter selections available is both controlling and dynamic to Class and Brand</description>
    <inlineHelpText>Search All Divisions within the agreement or search to filter the results.</inlineHelpText>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>