force-app/main/default/objects/Customer_Price_List__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>