force-app/main/default/objects/Customer_Price_List__c/fields/External_CPL_Agreement__c.field-meta.xml
<CustomField>
    <fullName>External_CPL_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated whenever a user creates and schedules a new External CPL. Stores the relationship for the record to appear on the related list in the page layout and to query within when fetching records for the CPL.</description>
    <label>External CPL Agreement</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>External Customer Price Lists</relationshipLabel>
    <relationshipName>External_Customer_Price_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>