force-app/main/default/objects/Customer_Price_List__c/fields/Last_Successful_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Run_Time__c</fullName>
    <description>Stamped on a record whenever the CPL Email batch runs and sends the email. This value is used in subsequent logic to determine whether or not a CPL needs to be run again.</description>
    <inlineHelpText>The last time this CPL was emailed.</inlineHelpText>
    <label>Last Successful Run Time</label>
    <type>DateTime</type>
</CustomField>