force-app/main/default/objects/Customer_Price_List__c/fields/Level_Filter__c.field-meta.xml
<CustomField>
    <fullName>Level_Filter__c</fullName>
    <description>Either searches within the agreement or changes the query so also show products where the set and subset match the line items that are priced at Set and Subset level.</description>
    <inlineHelpText>Select Item Level (Expand Sets and Subsets) to show products with matching sets and subsets outside of the agreement.</inlineHelpText>
    <label>Level Filter</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Line Level</fullName>
                <default>true</default>
                <label>Agreement Line Level</label>
            </value>
            <value>
                <fullName>Item Level (Expand Sets and Subsets)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>