force-app/main/default/objects/Customer_Price_List__c/fields/Most_Recent_CPL_Batch_Result__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_CPL_Batch_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to custom object to track whether the most recent batch run was a success or contained errors.</description>
    <label>Most Recent CPL Batch Result</label>
    <referenceTo>CPL_Batch_Result__c</referenceTo>
    <relationshipLabel>Customer Price Lists</relationshipLabel>
    <relationshipName>Customer_Price_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>