force-app/main/default/objects/Customer_Price_List__c/fields/New_Or_Changed_Only__c.field-meta.xml
<CustomField>
    <fullName>New_Or_Changed_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A filter on the CPL form where if TRUE then it will only show records that have been published or created since ___</description>
    <label>New Or Changed Only</label>
    <type>Checkbox</type>
</CustomField>