force-app/main/default/objects/Customer_Price_List__c/fields/Print_Date__c.field-meta.xml
<CustomField>
    <fullName>Print_Date__c</fullName>
    <description>Either the 25th of the month or every Friday. The CPL batch will run daily and if it is a Friday it will look for CPLs with a Friday print date to send to customers. On the 25th of the month, the batch will look for Print Dates of every 25th.</description>
    <inlineHelpText>When should this be emailed to the recipient?</inlineHelpText>
    <label>Print Date</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Submit Every Friday</fullName>
                <default>true</default>
                <label>Per Submit Every Friday</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>