force-app/main/default/objects/Customer_Price_List__c/fields/Purchased_Stocked_Filter__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Stocked_Filter__c</fullName>
    <description>Looks at the Is_Stocked flag on the product or the 12 Month Sales Volume field on the contract line to determine whether the product should be shown or not.</description>
    <inlineHelpText>Filter to show all agreement lines, just stocked products, or just products the customer has purchased in the past 12 months.</inlineHelpText>
    <label>Purchased/Stocked Filter</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show All Agreement Lines</fullName>
                <default>true</default>
                <label>Show All Agreement Lines</label>
            </value>
            <value>
                <fullName>Show Purchased Agreement Lines Only</fullName>
            </value>
            <value>
                <fullName>Show Stock Agreement Lines Only</fullName>
            </value>
            <value>
                <fullName>Show Purchased Or Stocked Agreement Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>