force-app/main/default/objects/Customer_Price_List__c/fields/Regional_National_Filter__c.field-meta.xml
<CustomField>
    <fullName>Regional_National_Filter__c</fullName>
    <description>Either shows products just on this agreement, on the agreement&apos;s parent (regional), or on the agreement&apos;s grandparent (national)</description>
    <label>Regional/National Filter</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show Current and Chain Account Pricing</fullName>
                <default>true</default>
                <label>Show Current and Chain Account Pricing</label>
            </value>
            <value>
                <fullName>Show National Agreement Lines (if any)</fullName>
            </value>
            <value>
                <fullName>Ignore Regional Chain AND National Agreement Lines (if any)</fullName>
            </value>
            <value>
                <fullName>Show Chain Accounts Only</fullName>
            </value>
            <value>
                <fullName>Show Regional Chain AND National Agreement Lines (if any)</fullName>
                <isActive>false</isActive>
                <label>Show Regional Chain AND National Agreement Lines (if any)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>