force-app/main/default/objects/Customer_Price_List__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A text value that does not change the data of the CPL, but will change the name and email shown on the CPL. The list of users are the account owners of the Ship To&apos;s on the Agreement&apos;s Account.  

It is a lookup to the user object so the Name and Email field can be easily retrieved.</description>
    <inlineHelpText>Whose name and email should appear on the CPL?</inlineHelpText>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Price_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>