force-app/main/default/objects/Customer_Price_List__c/fields/Segments__c.field-meta.xml
<CustomField>
    <fullName>Segments__c</fullName>
    <description>Displays as a multi-select in the CPL form but is a text field. Defaults to All Segments which searches for all products in the agreement, but if a user selects one or multiple among the list of segments on the products of published contract line items then the query will only search for the selections. Filter selections available is both controlling and dynamic to Class and Brand and Division</description>
    <inlineHelpText>Search All Segments within the agreement or search to filter the results.</inlineHelpText>
    <label>Segments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>