force-app/main/default/objects/Customer_Price_List__c/fields/TXN_History__c.field-meta.xml
<CustomField>
    <fullName>TXN_History__c</fullName>
    <description>Only one active value, 12 Months, to correspond with the Purchased filter which will only show products that have been purchased within this TXN History date range (12 Months)</description>
    <label>TXN History</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Purchased_Stocked_Filter__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Last 12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>