force-app/main/default/objects/Customer_Price_List__c/fields/Version_Format__c.field-meta.xml
<CustomField>
    <fullName>Version_Format__c</fullName>
    <description>Either pdf (visualforce page) or xls (xml) generated to send to the customer.</description>
    <inlineHelpText>Select the file format to be sent to the recipient.</inlineHelpText>
    <label>Version Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
                <default>true</default>
                <label>PDF</label>
            </value>
            <value>
                <fullName>XLS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>