force-app/main/default/objects/Customer_Price_List__c/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <description>Schedule a branded pdf or xls to be sent to your customer</description>
    <label>External</label>
</RecordType>