force-app/main/default/objects/Customer_Price_List__c/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <description>Download an xls - for internal use only.</description>
    <label>Internal</label>
</RecordType>